modificación de validaciones y de la documentación de la API para el módulo de corrosiones
